--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "babel-preset-solid": "^1.2.2",
     "eslint": "^8.0.1",
