--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "jsxImportSource": "solid-js",
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
   },
   "include": [
     "./src"
